trying to fix overlapping issue on ipad landscape

--- a/css/index.css
+++ b/css/index.css
@@ -154,11 +154,12 @@ h6 {
 }
 header {
   width: 100%;
-  height: 97vh;
+  min-height: 97vh;
+  overflow: hidden;
 }
 @media (max-width: 1000px) {
   header {
-    height: 75vh;
+    min-height: 75vh;
   }
 }
 header .bannerLinks {
