--- a/less/header.less
+++ b/less/header.less
@@ -2,12 +2,12 @@
 
 header{
     width: 100%; 
-    height: 97vh; 
-    
-    // .tb(red);
+    min-height: 97vh; 
+
+    overflow: hidden; 
 
     @media (max-width: 1000px){
-        height: 75vh; 
+        min-height: 75vh; 
     }
 
     .bannerLinks {
